<resources>
    <string name="app_name">ComponentsDemo</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter username</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="hobbies">Hobbies</string>
    <string name="cricket">Cricket</string>
    <string name="foolball">Foolball</string>
    <string name="volleyball">Volleyball</string>
    <string name="hockey">Hockey</string>
    <string name="birthdate">Birthdate</string>
    <string name="nationality">Nationality</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="select_birthtime">Select Birthtime</string>
    <string name="select_birthdate">Select Birthdate</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="not_a_member_sign_up_now">Not a member ? Sign up now.</string>
    <string name="already_registered_login_me">Already registered? Login Me.</string>
    <string name="user_profile">User profile</string>
    <string name="save">Save</string>
    <string name="seek">Seek</string>
    <string name="brightness">Brightness</string>
    <string name="rating">Rating</string>
    <string name="turnon">Turnon</string>
    <string name="update">Update</string>
    <string name="ratingbar">Ratingbar</string>
    <string name="seekbar">SeekBar</string>
    <string name="next">Next</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="your_new_password">Your new password</string>
    <string name="confrim_password">Confirm Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="login_through_admin_panel">Login through admin panel</string>
    <string name="admin_login">Admin Login</string>
    <string name="user_list">User List</string>
    <string name="backarrow">backarrow</string>


    <string-array name="india_states">
        <item>Select your state</item>
        <item>Andaman and Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>


    <string-array name="array_countries">

        <item>Select your nation</item>
        <item>Australia</item>
        <item>India</item>
        <item>Canada</item>
        <item>Cambodia</item>
        <item>China</item>
        <item>England</item>
        <item>France</item>
        <item>Japan</item>
        <item>Rusia</item>
        <item>USA</item>

    </string-array>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_display_data">Display Data</string>
    <string name="nav_location">Location</string>
    <string name="nav_about_us">About Us</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_s_profile">User\'s Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="location">Location</string>
    <string name="birthtime">Birthtime</string>
    <string name="Nation">Nation</string>
    <string name="login_through_user_panel">Login through user panel</string>
    <string name="hello">Hello</string>
    <string name="users_list">Users List</string>
    <string name="account_login">Account Login</string>
    <string name="forgot_password1">Forgot Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="mobile_number">Contact Number</string>
    <string name="or">OR</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_google">Sign in with google+</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="your_full_name">Your full name</string>
    <string name="mobile">Mobile</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="sign_up">Sign up</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>


</resources>

