<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_display_data"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile"
            android:visible="true" />

        <item
            android:id="@+id/nav_users_list"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/users_list"
            android:visible="true" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_location_searching_black_24dp"
            android:title="@string/location"
            android:visible="true" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/about_us"
            android:visible="true" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <!-- <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />-->
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_warning_black_24dp"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
