<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/White"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/lluserlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/White"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:text="@string/registration"
            android:textColor="@color/singup"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_33sdp"
            android:background="@drawable/round_corner_border"
            android:orientation="vertical"
            android:padding="@dimen/_3sdp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp">

                <EditText
                    android:id="@+id/edtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableStart="@drawable/lock"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtconfirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableStart="@drawable/lock"
                    android:ems="10"
                    android:hint="@string/confrim_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtmobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableStart="@drawable/ic_local_phone_black_24dp"
                    android:ems="10"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/buttonbackground"
            android:text="@string/sign_up"
            android:textColor="@color/White"
            android:textSize="@dimen/_10sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textColor="@color/Black"
            android:textSize="@dimen/_7sdp" />

        <Button
            android:id="@+id/btnloginwithfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3b5998"
            android:text="@string/sign_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnloginwithgoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="#dc4e41"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/txtloginuserpanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:padding="@dimen/_3sdp"
            android:text="@string/already_registered_login_me"
            android:textColor="@color/blue"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>