<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rladminlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:text="@string/admin_login"
            android:textColor="@color/White"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="@dimen/_26sdp"
            android:layout_marginRight="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_59sdp"
            android:background="@color/White"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_30sdp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:hint="@string/user_name"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/_18sdp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edtpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableStart="@drawable/lock"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txtforgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/forgot_password1"
                    android:textColor="@color/blue" />


                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_22sdp"
                    android:background="@color/buttonbackground"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/txtuserlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/login_through_user_panel"
                    android:textColor="@color/blue" />


            </LinearLayout>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="@dimen/_82sdp"
            android:layout_height="@dimen/_82sdp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/user_profile_image_background"
            android:elevation="4dp"
            android:src="@drawable/usermale" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>