<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlchangepassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <ImageView
            android:id="@+id/backtoforgotpassword"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>


        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center_horizontal"
            android:text="@string/change_password"
            android:textColor="@color/White"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="@dimen/_26sdp"
            android:layout_marginRight="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/White"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edtnewpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableStart="@drawable/lock"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edtconfirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableStart="@drawable/lock"
                        android:hint="@string/confrim_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnpasswordsave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_23sdp"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@color/buttonbackground"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>

