<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <ImageView
            android:id="@+id/backtouserlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:src="@drawable/back" />


        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password1"
            android:textColor="@color/White"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="@dimen/_26sdp"
            android:layout_marginRight="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/White"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:orientation="vertical"
                android:paddingTop="@dimen/_30sdp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableStart="@drawable/email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/_18sdp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btnnext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_23sdp"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:background="@color/buttonbackground"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
